--- a/templates/home.html
+++ b/templates/home.html
@@ -417,35 +417,35 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Brad Pitt</p>
                     <span class="position">Marketing Manager</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'images/person_2.jpg' %})">
+                  <div class="user-img mb-5" style="background-image: url({% static 'images/person_1.jpg' %})">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Brad Pitt</p>
                     <span class="position">Interface Designer</span>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'images/person_3.jpg' %})">
+                  <div class="user-img mb-5" style="background-image: url({% static 'images/person_1.jpg' %})">
                     <span class="quote d-flex align-items-center justify-content-center">
                       <i class="icon-quote-left"></i>
                     </span>
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Brad Pitt</p>
                     <span class="position">UI Designer</span>
                   </div>
                 </div>
@@ -459,7 +459,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Brad Pitt</p>
                     <span class="position">Web Developer</span>
                   </div>
                 </div>
@@ -473,7 +473,7 @@
                   </div>
                   <div class="text text-center">
                     <p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Garreth Smith</p>
+                    <p class="name">Brad Pitt</p>
                     <span class="position">System Analyst</span>
                   </div>
                 </div>
